fixed a bug with the images not showing up on the landing page website

--- a/styles.css
+++ b/styles.css
@@ -190,10 +190,6 @@ body {
   padding: 40px 40px;
 }
 
-svg {
-  color: aqua;
-}
-
 /* .text-wrapper {
   display: flex;
   flex-direction: column;
